--- a/app/src/main/res/layout/fragment_gestion.xml
+++ b/app/src/main/res/layout/fragment_gestion.xml
@@ -1,6 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/fragmentGestion"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".menu.ui.gestion.GestionFragment"/>
+    android:padding="16dp"
+    android:background="?attr/colorSurface">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:gravity="center_horizontal"
+        android:padding="8dp">
+
+        <Button
+            android:id="@+id/btnCampos"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Gestionar Campos"
+            android:layout_marginVertical="6dp" />
+
+        <Button
+            android:id="@+id/btnLotes"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Gestionar Lotes"
+            android:layout_marginVertical="6dp" />
+
+        <Button
+            android:id="@+id/btnActividades"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Gestionar Actividades"
+            android:layout_marginVertical="6dp" />
+
+        <Button
+            android:id="@+id/btnCosechas"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Gestionar Cosechas"
+            android:layout_marginVertical="6dp" />
+
+        <Button
+            android:id="@+id/btnRecursos"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Gestionar Recursos"
+            android:layout_marginVertical="6dp" />
+
+        <Button
+            android:id="@+id/btnInsumos"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Gestionar Insumos"
+            android:layout_marginVertical="6dp" />
+
+    </LinearLayout>
+</ScrollView>
