--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -38,7 +38,11 @@
         android:id="@+id/perfilFragment"
         android:name="com.example.agroapp.menu.ui.perfil.PerfilFragment"
         android:label="fragment_perfil"
-        tools:layout="@layout/fragment_perfil" />
+        tools:layout="@layout/fragment_perfil" >
+        <action
+            android:id="@+id/action_perfilFragment_to_cambiarPasswordFragment"
+            app:destination="@id/cambiarPasswordFragment" />
+    </fragment>
     <fragment
         android:id="@+id/salirFragment"
         android:name="com.example.agroapp.menu.ui.salir.SalirFragment"
@@ -102,6 +106,15 @@
         <action
             android:id="@+id/action_recursoFragment_to_gestionFragment"
             app:destination="@id/gestionFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/cambiarPasswordFragment"
+        android:name="com.example.agroapp.menu.ui.perfil.cambiarPass.CambiarPasswordFragment"
+        android:label="fragment_cambiar_password"
+        tools:layout="@layout/fragment_cambiar_password" >
+        <action
+            android:id="@+id/action_cambiarPasswordFragment_to_perfilFragment"
+            app:destination="@id/perfilFragment" />
     </fragment>
 
 </navigation>
