feat: agregue la entidad campo

--- a/app/src/main/res/layout/fragment_perfil.xml
+++ b/app/src/main/res/layout/fragment_perfil.xml
@@ -57,14 +57,14 @@
         android:id="@+id/btnCambiarPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Editar perfil"
-        android:textAllCaps="false"
         android:layout_marginTop="24dp"
+        android:backgroundTint="@color/colorPrimary"
+        android:text="Cambiar clave"
+        android:textAllCaps="false"
+        android:textColor="@color/white"
         app:icon="@drawable/ic_edit"
         app:iconPadding="8dp"
-        app:iconTint="@color/white"
-        android:backgroundTint="@color/colorPrimary"
-        android:textColor="@color/white" />
+        app:iconTint="@color/white" />
 
 </LinearLayout>
 
