feat: agregue el alta de campo junto con una validacion mas robusta para la lat y long

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -73,6 +73,9 @@
         <action
             android:id="@+id/action_campoFragment_to_detalleCampoFragment"
             app:destination="@id/detalleCampoFragment" />
+        <action
+            android:id="@+id/action_campoFragment_to_agregarCampoFragment"
+            app:destination="@id/agregarCampoFragment" />
     </fragment>
     <fragment
         android:id="@+id/cosechaFragment"
@@ -126,6 +129,14 @@
         tools:layout="@layout/fragment_detalle_campo" >
         <action
             android:id="@+id/action_detalleCampoFragment_to_campoFragment"
+            app:destination="@id/campoFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/agregarCampoFragment"
+        android:name="com.example.agroapp.menu.ui.gestion.campo.agregarCampo.AgregarCampoFragment"
+        android:label="AgregarCampoFragment" >
+        <action
+            android:id="@+id/action_agregarCampoFragment_to_campoFragment"
             app:destination="@id/campoFragment" />
     </fragment>
 
