feat: agregue lote a la app, detalle, informacion y el adapter con los fragments

--- a/app/src/main/res/layout/fragment_detalle_lote.xml
+++ b/app/src/main/res/layout/fragment_detalle_lote.xml
@@ -1,15 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/fragment_lote"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".menu.ui.gestion.lote.detalleLote.DetalleLoteFragment">
+    tools:context=".menu.ui.gestion.lote.LoteFragment">
 
-    <TextView
+
+    <LinearLayout
+        android:id="@+id/header"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:padding="16dp"
+        android:background="?attr/colorPrimary">
+
+        <TextView
+            android:id="@+id/tvTituloLotes"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Lotes del campo"
+            android:textColor="@android:color/white"
+            android:textStyle="bold"
+            android:textSize="20sp" />
+
+        <TextView
+            android:id="@+id/tvCampoSeleccionado"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Campo seleccionado"
+            android:textColor="@android:color/white"
+            android:textSize="14sp"
+            android:layout_marginTop="4dp" />
+    </LinearLayout>
+
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/lista"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Hello" />
+        android:layout_marginTop="72dp"
+        android:padding="8dp"
+        android:clipToPadding="false"
+        tools:listitem="@layout/item_lote" />
 
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -24,4 +58,5 @@
         android:layout_gravity="bottom|end"
         android:layout_margin="24dp"
         app:elevation="8dp" />
-</FrameLayout>
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
