--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -150,6 +150,18 @@
         <action
             android:id="@+id/action_detalleLoteFragment_to_loteFragment"
             app:destination="@id/loteFragment" />
+        <action
+            android:id="@+id/action_detalleLoteFragment_to_informacionLoteFragment"
+            app:destination="@id/informacionLoteFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/informacionLoteFragment"
+        android:name="com.example.agroapp.menu.ui.gestion.lote.infoLote.InformacionLoteFragment"
+        android:label="fragment_informacion_lote"
+        tools:layout="@layout/fragment_informacion_lote" >
+        <action
+            android:id="@+id/action_informacionLoteFragment_to_detalleLoteFragment"
+            app:destination="@id/detalleLoteFragment" />
     </fragment>
 
 </navigation>
