--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -61,6 +61,9 @@
         <action
             android:id="@+id/action_actividadFragment_to_gestionFragment"
             app:destination="@id/gestionFragment" />
+        <action
+            android:id="@+id/action_actividadFragment_to_detalleActividadFragment"
+            app:destination="@id/detalleActividadFragment" />
     </fragment>
     <fragment
         android:id="@+id/campoFragment"
@@ -174,6 +177,15 @@
         <action
             android:id="@+id/action_agregarLoteFragment_to_detalleLoteFragment"
             app:destination="@id/detalleLoteFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/detalleActividadFragment"
+        android:name="com.example.agroapp.menu.ui.gestion.actividad.detalleActividad.DetalleActividadFragment"
+        android:label="fragment_detalle_actividad"
+        tools:layout="@layout/fragment_detalle_actividad" >
+        <action
+            android:id="@+id/action_detalleActividadFragment_to_actividadFragment"
+            app:destination="@id/actividadFragment" />
     </fragment>
 
 </navigation>
